--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -2,38 +2,36 @@
 
 {% block body_id 'blog_index' %}
 
+
+
 {% block main %}
-    {% for post in posts %}
-        <article class="post">
-            <h2>
-                <a href="{{ path('blog_post', {slug: post.slug}) }}">
-                    {{ post.title }}
-                </a>
-            </h2>
+	<div class="container">
+	<h3 style="text-align:center"> <u>Symfony Github Repositories </u> </h3>
+	<br>
+	<table class="table table-hover">
+	<tr>
+		<th>Name</th>
+		<th>Full Name</th>
+		<th>Forks Count</th>
+		<th>Has Issues</th>
+		<th>Watchers</th>
+		<th>Clone URL</th>
+	</tr>
+     {% for repo in repos %}
+        <tr>
+               <td> {{ repo.name }}	</td>
+               <td> {{ repo.full_name }}	</td>
+               <td> {{ repo.forks }}	</td>
+               <td> {{ repo.has_issues }}	</td>
+               <td> {{ repo.watchers }}	</td>
+               <td> <a href="{{ repo.clone_url }}">{{ repo.clone_url }}</a>	</td>
 
-            <p class="post-metadata">
-                <span class="metadata"><i class="fa fa-calendar"></i> {{ post.publishedAt|localizeddate('long', 'medium', null, 'UTC') }}</span>
-                <span class="metadata"><i class="fa fa-user"></i> {{ post.author.fullName }}</span>
-            </p>
-
-            {{ post.summary|md2html }}
-
-            {{ include('blog/_post_tags.html.twig') }}
-        </article>
+        </tr>
     {% else %}
-        <div class="well">{{ 'post.no_posts_found'|trans }}</div>
+        <p> No repositories found</p>
     {% endfor %}
 
-    {% if posts.haveToPaginate %}
-        <div class="navigation text-center">
-            {{ pagerfanta(posts, 'twitter_bootstrap3_translated', {routeName: 'blog_index_paginated'}) }}
-        </div>
-    {% endif %}
-{% endblock %}
+    </table>
+  	</div>
 
-{% block sidebar %}
-    {{ parent() }}
-
-    {{ show_source_code(_self) }}
-    {{ include('blog/_rss.html.twig') }}
 {% endblock %}
